config/templates/sampleapp-prod/comp-machine-sensor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: machine-sensor
spec:
  replicas: 3
