config/templates/sampleapp-prod/comp-machine-sensor/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: machine-sensor
spec:
  host: $COMP_0815_ROUTE_HOST
  port:
    targetPort: 8080-tcp
  subdomain: ""
  to:
    kind: Service
    name: machine-sensor
    weight: 100
  wildcardPolicy: None
status:
  ingress: []
